--- a/client/src/components/Table/table.module.css
+++ b/client/src/components/Table/table.module.css
@@ -1,9 +1,9 @@
 .table{
-    border: 1px solid #000;
-    font-size: 12px;
+    /* border: 1px solid #000; */
+    font-size: 10px;
 }
 
-.table tr,
+/* .table tr,
 .table td{
     border: 1px solid #000;
 }
@@ -14,4 +14,4 @@
 
 .pointCell{
     width: 150px;
-}
+} */
